stop wrapping notification tooltips on small screens.
fixes CNVS-5040

test plan:
  * log in as any user with at least one communication
    channel and navigate to the notification preferences
    page;
  * with a browser window narrower than ~ 1300px, verify
    that the 'do not send me anything' tooltip is not
    wrapped when its button is hovered over;
  * with a browser window at or larger than 1300px, verify
    that the right padding on the notification table visible
    at < 1300px widths is no longer present.

Reviewed-on: https://gerrit.instructure.com/19274
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Clare Hetherington <clare@instructure.com>
Product-Review: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/notification_preferences.sass
+++ b/app/stylesheets/notification_preferences.sass
@@ -8,6 +8,13 @@ $stripeColor: #f3f4f8
   th:nth-child(2n)
     background: none repeat scroll 0 0 $stripeColor
 
+.notification-table-wrapper
+  +transition(margin 0.3s ease)
+
+@media screen and (max-width: 1300px)
+  .notification-table-wrapper
+    margin-right: 40px
+
 .notification-prefs-table
 
   .ui-button
